2005-06-25  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py: missing a "not" was breaking uniqueness
	constraints for projections.

	* tests/test_base.py (test_project7.run): test for bug reported by
	Faber (Fabio Vescarelli) -- uniqueness constraints were getting
	lost on projections.

2005-06-24  Jacob Smullyan  <smulloni@smullyan.org>

	* MANIFEST.in: fix to include testingtesting.py in tarball.

	* src/pydo/__init__.py (__version__): version number bumped up to
	2.0b0 in preparation for release.

	* tests/test_dbi.py (test_pool1): test for connection pool.

2005-06-23  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/dbi.py: removed unused import.
	(ConnectionPool.release): fix for connection pool (wrong logic for
	keeping connections).

2005-06-22  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst, src/pydo/base.py (autoschema): change
	"locals().update" to "globals().update" in docstring of autoschema
	and corresponding manual documentation  (updating locals is bAAAAd.)

2005-06-21  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/fixture.py: moved base_fixture here from test_base.

	* tests/test_multifetch.py (test_fetch1): first fetch test.

	* doc/manual.rst: section on transactions (suggested by Kieran
	Holland). 

2005-06-20  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document that None will be stored for columns
	upon new() if they aren't specified, and there is no refetch.

	* tests/test_base.py: test for new with default values; for
	refresh, and getSome.

	* src/pydo/base.py (PyDO._new): when creating an object without
	refetch, add None to the dictionary for any columns that aren't
	specified in the fieldData.

2005-06-19  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_base.py: two delete tests.

2005-06-16  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: note about mysql's case-sensitivity of table
	names and the guess_tablename feature.
